--- a/researcher/templates/researcher/layouts/showProject.html
+++ b/researcher/templates/researcher/layouts/showProject.html
@@ -1,7 +1,8 @@
-{% load static%}
-<div class="dialog-main showProject">
-    <div class="card text-right dialog">
+{% load static %}
+<div class="fixed-back showProject">
+    <div class="card small-card text-right stick-footer">
         <div class="close"></div>
+        <div class="card-head">عنوان پروژه</div>
         <div class="vote">
             <span class="dots"></span>
         </div>
@@ -9,49 +10,53 @@
             <div class="card expert-back text-center">ارزیابی از استاد</div>
         </div>
         <div class="container">
-            <div class="row">
-               <div class="col-lg-12">
-                   <h6 class="project-title"></h6>
-               </div>
-            </div>
             <div class="row mbottom-lg-30">
                 <div class="col-lg-6 techniques"></div>
                 <div class="col-lg-6">
-                    <div class="establish-time">
-                        <div class="time-head">زمان ثبت</div>
-                        <div class="time-body"></div>
+                    <div class="establish-time col-6">
+                        <span class="time-head">ثبت</span>
+                        <div class="time-body">تاریخ ثبت</div>
                     </div>
-                    <div class="time-left">
-                        <div class="time-head">مهلت انجام</div>
-                        <div class="time-body"></div>
+                    <div class="time-left col-6">
+                        <span class="time-head">مهلت</span>
+                        <div class="time-body">مهلت</div>
                     </div>
                 </div>
             </div>
             <div class="row mbottom-lg-25">
                 <div class="col-lg-12 text-right">
-                    <div class="project-info custom-border-title">
-                        <span class="title">اطلاعات پروژه</span>
-                        <span class="title-back"></span>
+                    <span class="section-title">اطلاعات پروژه</span>
+                    <div class="section">
                         <div class="project-info-innerDiv">
                             <div class="project-info-tabs">
-                                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                                    <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" role="tab" aria-controls="v-pills-home" aria-selected="true"></a>
-                                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" role="tab" aria-controls="v-pills-profile" aria-selected="false"></a>
-                                    <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" role="tab" aria-controls="v-pills-messages" aria-selected="false"></a>
-                                    <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" role="tab" aria-controls="v-pills-settings" aria-selected="false"></a>
+                                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
+                                     aria-orientation="vertical">
+                                    <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
+                                       role="tab" aria-controls="v-pills-home"
+                                       aria-selected="true"></a>
+                                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
+                                       role="tab" aria-controls="v-pills-profile"
+                                       aria-selected="false"></a>
+                                    <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
+                                       role="tab" aria-controls="v-pills-messages"
+                                       aria-selected="false"></a>
+                                    <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
+                                       role="tab" aria-controls="v-pills-settings"
+                                       aria-selected="false"></a>
                                 </div>
                             </div>
-                            <div class="project-info-content"></div>
+                            <div class="project-info-content">
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row mbottom-lg-25">
-                <div class="col-lg-9">
-                    <button class="w-100 accept-btn btn">ارسال  درخواست انجام پروژه</button>
-                </div>
-            </div>
-            <div class="row mbottom-lg-25">
+            <div class="row">
+                    <div class="row mbottom-lg-25">
+                            <div class="col-lg-9">
+                                <button class="w-100 accept-btn btn">ارسال  درخواست انجام پروژه</button>
+                                </div>
+                    </div>            
                 <div class="col-lg-12 text-right">
                     {% include 'researcher/layouts/comment.html' %}
                 </div>
