--- a/researcher/templates/researcher/layouts/projectList.html
+++ b/researcher/templates/researcher/layouts/projectList.html
@@ -8,7 +8,8 @@
                 <li class="nav-item"><a class="nav-link" id="your-project" href="#your-project">پروژه های مرتبط</a></li>
                 <li class="nav-item"><a class="nav-link" id="done-project" href="#done-project">پروژه های انجام شده</a></li>
             </ul>
-            <div class="tab-content">
+            <div class="tab-content new-projects" style="display: block;">
+                <div class="fuck"></div>
                     {% for project in project_list %}
                     <div class="card project-item">                    
                         <span class="header">{{project.project_title}} <span class="sub-header">( {{project.started}} قبل )</span></span>
@@ -24,38 +25,9 @@
                         <button type="button" class="chamran-btn-delete">رد</button>
                     </div>
                     {% endfor %}
-                <!-- <div class="card project-item">
-                    <div class="alert"><span>فرم نظرسنجی فعال شده است!</span></div>
-                    <span class="header">محلول کشت سلولی <span class="sub-header">( 2 ماه قبل )</span></span>
-                    <span>
-                        <span class="border-span">PCR</span>
-                    </span>
-                    <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>
-                    <span><i class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>8 ماه</span> فرصت باقی است!</span>
-                    <button type="button" class="chamran-btn-info">مشاهده</button>
-                    <button type="button" class="chamran-btn-delete">رد</button>
-                </div>
-                <div class="card project-item">
-                    <span class="header">تولید واکسن اچ پی وی<span class="sub-header">( 3 ماه قبل )</span></span>
-                    <span>
-                        <span class="border-span">تکنیک 1</span>
-                    </span>
-                    <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>10 ساعت</span> وقت در هفته نیاز دارد!</span>
-                    <span><i class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>10 روز</span> فرصت باقی است!</span>
-                    <button type="button" class="chamran-btn-info">مشاهده</button>
-                    <button type="button" class="chamran-btn-delete">رد</button>
-                </div>
-                <div class="card project-item">
-                    <span class="header">کیت تشخیصی سرطان<span class="sub-header">( 4 ماه قبل )</span></span>
-                    <span>
-                        <span class="border-span">تکنیک من</span>
-                    </span>
-                    <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>5 ساعت</span> وقت در هفته نیاز دارد!</span>
-                    <span><i class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>2 ساعت</span> فرصت باقی است!</span>
-                    <button type="button" class="chamran-btn-info">مشاهده</button>
-                    <button type="button" class="chamran-btn-delete">رد</button>
-                </div>-->
             </div>
+            <div class="tab-content your-project" style="display: none;"></div>
+            <div class="tab-content done-project" style="display: none;"></div>
         </div>
     </div>
 </div>
