--- a/researcher/templates/researcher/layouts/preview_question.html
+++ b/researcher/templates/researcher/layouts/preview_question.html
@@ -5,13 +5,6 @@
         <div class="card info-card text-right">
             <div class="card-header"> سوال پژوهشی{{ question_title }}</div>
             <div class="inner-card">
-                {#                    <div class="row">#}
-                {#                        <div class="col-12">#}
-                {#                            <div class="timer">#}
-                {#                                <strong>{{ rest_days }}</strong>#}
-                {#                            </div>#}
-                {#                        </div>#}
-                {#                    </div>#}
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="textarea-text">
@@ -27,29 +20,13 @@
                         <div class="question-attach text-left">
                             <ul class="inline-list">
                                 <li class="list-item">
+                                {% if attachment == "  " %}
                                     <a href="{{ attachment.url }}" class="attach-file">
                                         <span class="doc-file"></span>
                                         <span>{{ file_name }}</span>
                                     </a>
+                                {% endif %} 
                                 </li>
-                                <!-- <li class="list-item">
-                                    <a href="#" class="attach-file">
-                                        <span class="png-file"></span>
-                                        <span>fileName</span>
-                                    </a>
-                                </li>
-                                <li class="list-item">
-                                    <a href="#" class="attach-file">
-                                        <span class="pdf-file"></span>
-                                        <span>fileName</span>
-                                    </a>
-                                </li>
-                                <li class="list-item">
-                                    <a href="#" class="attach-file" data-toggle="popover" title="j" data-content="12" data-placement="top">
-                                        <span class="jpg-file"></span>
-                                        <span>fileName</span>
-                                    </a>
-                                </li> -->
                             </ul>
                         </div>
                     </div>
