--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -15,13 +15,13 @@
     {% if request.user.expertuser.status == 'signed_up' %}
         {% include 'expert/layouts/initial_information.html' %}
     {% endif %}
-    {% with projects|first as project %}
-        {% if project.status == 2 %}
-            {% include 'expert/layouts/project_details.html' %}
-        {% else %}
+    {# {% with projects|first as project %} #}
+        {% if project.status != 2 %}
+            {#{% include 'expert/layouts/project_details.html' %}#}
+        {#{% else %}#}
             {% include 'expert/layouts/showProject.html' %}
         {% endif %}
-    {% endwith %}
+    {# {% endwith %} #}
 {% endblock %}
 
 {% block content %}
@@ -35,7 +35,7 @@
             <div class="project-info-tabs">
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
                      aria-orientation="vertical">
-                    {% if projects.first.status == 2 %}
+                    {% if project.status == 2 %}
                         <a class="nav-link active fs-15" id="new-projects" data-toggle="pill"
                            role="tab" aria-selected="true">
                             پروژه در حال انجام
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="tab-content cover-page">
-                {% if projects.first.status == 2 %}
+                {% if project.status == 2 %}
                     <div class="card box flow-root-display w-100">
                         <div class="box-body">
                             <div class="row" style="direction: ltr!important">
@@ -65,31 +65,31 @@
                                     <div class="project-progress step-2 mbottom-lg-25">
                                         <div class="step-container active">
                                         <span class="step-date">
-                                            <div class="start">1399/01/12</div>
+                                            <div class="start">{% gregorian_to_numeric_jalali project.date_project_started %}</div>
                                             </span>
                                             <span class="step-name">شروع پروژه</span>
                                         </div>
                                         <div class="step-container active">
                                         <span class="step-date">
-                                            <div class="first_phase">1399/01/12</div>
+                                            <div class="first_phase">{% gregorian_to_numeric_jalali project.date_phase_one_finished %}</div>
                                         </span>
                                             <span class="step-name">فاز اول</span>
                                         </div>
                                         <div class="step-container">
                                         <span class="step-date">
-                                            <div class="second_phase">1399/01/12</div>
+                                            <div class="second_phase">{% gregorian_to_numeric_jalali project.date_phase_two_deadline %}</div>
                                         </span>
                                             <span class="step-name">فاز دوم</span>
                                         </div>
                                         <div class="step-container">
                                         <span class="step-date">
-                                            <div class="third_phase">1399/01/12</div>
+                                            <div class="third_phase">{% gregorian_to_numeric_jalali project.date_phase_three_deadline %}</div>
                                         </span>
                                             <span class="step-name">فاز سوم</span>
                                         </div>
                                         <div class="step-container">
                                         <span class="step-date">
-                                            <div class="date_finished">1399/01/12</div>
+                                            <div class="date_finished">{% gregorian_to_numeric_jalali project.date_finished %}</div>
                                         </span>
                                             <span class="step-name">اتمام پروژه</span>
                                         </div>
@@ -101,7 +101,7 @@
                                 <div class="col-lg-8 col-xs-9">
                                     <div class="row mbottom-lg-25">
                                         <div class="col-lg-12 text-right">
-                                            <h6>پروژه سایتومتری</h6>
+                                            <h6>پروژه {{ project.project_form.project_title_persian}}</h6>
                                         </div>
                                     </div>
                                     <div class="row mbottom-lg-25">
@@ -116,7 +116,7 @@
                                                                     <span>کارفرما</span>
                                                                 </div>
                                                                 <div id="industry-name">
-                                                                    {{ projects.first.industry_creator }}
+                                                                    {{ project.industry_creator }}
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-6">
@@ -124,7 +124,7 @@
                                                                     <span>مجری</span>
                                                                 </div>
                                                                 <div id="enforcer-name">
-                                                                    استاد فلانی
+                                                                    {{ project.expert_accepted}}
                                                                 </div>
                                                             </div>
                                                             <div class="col-12 budget-text">
@@ -149,14 +149,14 @@
                                                     <div class="col-md-3">
                                                         <div class="industry-logo-preview">
                                                             <img id="industry_logo"
-                                                                 src="{% static 'expert/img/industry.jpg' %}"
+                                                                 src="{{ project.industry_creator.industryform.photo.url}}"
                                                                  alt="industry-logo">
                                                         </div>
                                                         <div class="budget-section">
                                                             <div class="budget">
                                                                 <div class="budget-header">بودجه</div>
                                                                 <div class="budget-content">
-                                                                    <div class="budget-amount">5,000,000</div>
+                                                                    <div class="budget-amount">{{ project.project_form.required_budget}}</div>
                                                                     <div>ریال</div>
                                                                 </div>
                                                             </div>
@@ -208,7 +208,7 @@
                                                                             توضیح و اهمیت آن را
                                                                             تبیین کنید.
                                                                         </div>
-                                                                        <div class="answer"></div>
+                                                                        <div class="answer">{{ project.project_form.main_problem_and_importance }}</div>
                                                                     </div>
                                                                     <div>
                                                                         <div class="question">
@@ -220,7 +220,7 @@
                                                                             خدمات
                                                                             درمانی یا ... حاصل می شود؟
                                                                         </div>
-                                                                        <div class="answer"></div>
+                                                                        <div class="answer">{{ project.project_form.progress_profitability }}</div>
                                                                     </div>
                                                                     <div>
                                                                         <div class="question">
@@ -229,7 +229,7 @@
                                                             </span>
                                                                             برآورد شما از سود مالی این پروژه چگونه است؟
                                                                         </div>
-                                                                        <div class="answer"></div>
+                                                                        <div class="answer">{{ project.project_form.predict_profit }}</div>
                                                                     </div>
                                                                 </div>
                                                             </div>
