--- a/industry/templates/industry/layouts/initial_information.html
+++ b/industry/templates/industry/layouts/initial_information.html
@@ -132,10 +132,10 @@
                         </div>
                         <div class="col-md-4"></div>
                     </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">ثبت تغییرات</button>
+                    </div>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary">ثبت تغییرات</button>
             </div>
         </div>
     </div>
