--- a/industry/templates/industry/layouts/initial_information.html
+++ b/industry/templates/industry/layouts/initial_information.html
@@ -276,42 +276,47 @@
                         در این قسمت لازم است ابتدا نوع کاربری خود را برای استفاده از سامانه انتخاب کنید.
                     </p>
                     <div class="radio-group">
-                        <div class="form-check ml-4">
-                            <input class="form-check-input" type="radio" name="usage" id="firstUsage"
-                                   value="industry">
-                            <label class="form-check-label" for="firstUsage">
-                                <svg id="RandD_icon" enable-background="new 0 0 64 64" height="512" viewBox="0 0 64 64"
-                                     width="512"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <g fill="#808080">
-                                        <path d="m17 17c-6.617 0-12 5.383-12 12s5.383 12 12 12 12-5.383 12-12h-2c0 5.514-4.486 10-10 10s-10-4.486-10-10 4.486-10 10-10z"></path>
-                                        <path d="m32 17c1.654 0 3-1.346 3-3s-1.346-3-3-3-3 1.346-3 3 1.346 3 3 3zm0-4c.551 0 1 .448 1 1s-.449 1-1 1-1-.448-1-1 .449-1 1-1z"></path>
-                                        <path d="m32 21c3.86 0 7-3.141 7-7s-3.14-7-7-7-7 3.141-7 7 3.14 7 7 7zm0-12c2.757 0 5 2.243 5 5s-2.243 5-5 5-5-2.243-5-5 2.243-5 5-5z"></path>
-                                        <path d="m22.767 17.842c.21.502.127 1.025-.216 1.368l-1.867 1.859 4.248 4.247 1.858-1.868c.343-.343.866-.427 1.41-.197.494.204.8.63.8 1.109v2.64h6v-2.64c0-.479.307-.905.843-1.127.5-.21 1.025-.128 1.367.215l1.858 1.868 4.248-4.247-1.867-1.859c-.342-.342-.426-.864-.217-1.364.011-.024.052-.118.078-.169.223-.424.616-.677 1.051-.677h2.639v-6h-2.639c-.473 0-.909-.313-1.128-.842-.207-.494-.123-1.031.216-1.368l1.867-1.859-4.248-4.247-1.858 1.868c-.342.343-.866.427-1.41.197-.493-.204-.8-.63-.8-1.109v-2.64h-6v2.64c0 .479-.307.905-.843 1.127-.501.21-1.025.127-1.367-.215l-1.858-1.868-4.248 4.247 1.867 1.86c.338.336.422.873.197 1.409-.201.486-.637.8-1.11.8h-2.638v6h2.639c.473 0 .909.313 1.128.842zm-1.767-4.842h.639c1.285 0 2.445-.799 2.972-2.068.524-1.248.27-2.646-.648-3.558l-.447-.445 1.413-1.413.445.446c.915.92 2.313 1.174 3.592.635 1.235-.513 2.034-1.673 2.034-2.957v-.64h2v.64c0 1.284.799 2.444 2.067 2.971 1.249.525 2.645.271 3.56-.648l.444-.446 1.413 1.413-.446.444c-.918.913-1.173 2.311-.635 3.593.513 1.234 1.673 2.033 2.958 2.033h.639v2h-.639c-1.172 0-2.253.668-2.817 1.737-.048.089-.146.312-.154.328l-.001.003c-.524 1.247-.27 2.644.648 3.558l.447.445-1.413 1.413-.445-.446c-.914-.918-2.311-1.174-3.592-.635-1.235.513-2.034 1.673-2.034 2.957v.64h-2v-.64c0-1.284-.799-2.444-2.067-2.971-1.25-.526-2.646-.271-3.56.648l-.444.446-1.413-1.413.447-.445c.918-.914 1.172-2.311.634-3.592-.513-1.234-1.673-2.033-2.958-2.033h-.639z"></path>
-                                        <path d="m16 29h2v2h-2z"></path>
-                                        <path d="m20 29h2v2h-2z"></path>
-                                        <path d="m12 29h2v2h-2z"></path>
-                                        <path d="m47 3h2v2h-2z"></path>
-                                        <path d="m51 3h10v2h-10z"></path>
-                                        <path d="m47 7h14v2h-14z"></path>
-                                        <path d="m47 11h14v2h-14z"></path>
-                                        <path d="m47 15h2v2h-2z"></path>
-                                        <path d="m51 15h2v2h-2z"></path>
-                                        <path d="m55 15h2v2h-2z"></path>
-                                        <path d="m59 31h5l-8-10.667-8 10.667h5v30h-6v-18h5l-8-10.667-8 10.667h5v18h-6v-6h5l-8-10.667-8 10.667h5v6h-8.184c.112-.314.184-.648.184-1v-11.184c1.161-.414 2-1.514 2-2.816v-2.178c5.856-2.379 10-8.122 10-14.822h-2c0 7.72-6.28 14-14 14s-14-6.28-14-14 6.28-14 14-14v-2c-8.822 0-16 7.178-16 16 0 6.7 4.144 12.443 10 14.822v2.178c0 1.302.839 2.402 2 2.816v11.184c0 1.654 1.346 3 3 3h47v-2h-4zm-7-2 4-5.333 4 5.333h-3v32h-2v-32zm-12 12 4-5.333 4 5.333h-3v20h-2v-20zm-12 12 4-5.333 4 5.333h-3v8h-2v-8zm-11-8c1.383 0 2.719-.195 4-.527v1.527c0 .552-.449 1-1 1h-6c-.551 0-1-.448-1-1v-1.527c1.281.332 2.617.527 4 .527zm-1 16c-.551 0-1-.448-1-1v-11h4v11c0 .552-.449 1-1 1z"></path>
-                                    </g>
-                                </svg>
-                                <span>واحد تحقیق و توسعه</span>
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="usage" id="secondUsage"
-                                   value="research_group">
-                            <label class="form-check-label" for="secondUsage">
-                                <svg version="1.1" id="researchGroup_icon" xmlns="http://www.w3.org/2000/svg"
-                                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                                     viewBox="0 0 496 496" style="enable-background:new 0 0 496 496;"
-                                     xml:space="preserve">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-check mb-3">
+                                    <input class="form-check-input" type="radio" name="usage" id="firstUsage"
+                                           value="industry">
+                                    <label class="form-check-label" for="firstUsage">
+                                        <svg id="RandD_icon" enable-background="new 0 0 64 64" height="512"
+                                             viewBox="0 0 64 64"
+                                             width="512"
+                                             xmlns="http://www.w3.org/2000/svg">
+                                            <g fill="#808080">
+                                                <path d="m17 17c-6.617 0-12 5.383-12 12s5.383 12 12 12 12-5.383 12-12h-2c0 5.514-4.486 10-10 10s-10-4.486-10-10 4.486-10 10-10z"></path>
+                                                <path d="m32 17c1.654 0 3-1.346 3-3s-1.346-3-3-3-3 1.346-3 3 1.346 3 3 3zm0-4c.551 0 1 .448 1 1s-.449 1-1 1-1-.448-1-1 .449-1 1-1z"></path>
+                                                <path d="m32 21c3.86 0 7-3.141 7-7s-3.14-7-7-7-7 3.141-7 7 3.14 7 7 7zm0-12c2.757 0 5 2.243 5 5s-2.243 5-5 5-5-2.243-5-5 2.243-5 5-5z"></path>
+                                                <path d="m22.767 17.842c.21.502.127 1.025-.216 1.368l-1.867 1.859 4.248 4.247 1.858-1.868c.343-.343.866-.427 1.41-.197.494.204.8.63.8 1.109v2.64h6v-2.64c0-.479.307-.905.843-1.127.5-.21 1.025-.128 1.367.215l1.858 1.868 4.248-4.247-1.867-1.859c-.342-.342-.426-.864-.217-1.364.011-.024.052-.118.078-.169.223-.424.616-.677 1.051-.677h2.639v-6h-2.639c-.473 0-.909-.313-1.128-.842-.207-.494-.123-1.031.216-1.368l1.867-1.859-4.248-4.247-1.858 1.868c-.342.343-.866.427-1.41.197-.493-.204-.8-.63-.8-1.109v-2.64h-6v2.64c0 .479-.307.905-.843 1.127-.501.21-1.025.127-1.367-.215l-1.858-1.868-4.248 4.247 1.867 1.86c.338.336.422.873.197 1.409-.201.486-.637.8-1.11.8h-2.638v6h2.639c.473 0 .909.313 1.128.842zm-1.767-4.842h.639c1.285 0 2.445-.799 2.972-2.068.524-1.248.27-2.646-.648-3.558l-.447-.445 1.413-1.413.445.446c.915.92 2.313 1.174 3.592.635 1.235-.513 2.034-1.673 2.034-2.957v-.64h2v.64c0 1.284.799 2.444 2.067 2.971 1.249.525 2.645.271 3.56-.648l.444-.446 1.413 1.413-.446.444c-.918.913-1.173 2.311-.635 3.593.513 1.234 1.673 2.033 2.958 2.033h.639v2h-.639c-1.172 0-2.253.668-2.817 1.737-.048.089-.146.312-.154.328l-.001.003c-.524 1.247-.27 2.644.648 3.558l.447.445-1.413 1.413-.445-.446c-.914-.918-2.311-1.174-3.592-.635-1.235.513-2.034 1.673-2.034 2.957v.64h-2v-.64c0-1.284-.799-2.444-2.067-2.971-1.25-.526-2.646-.271-3.56.648l-.444.446-1.413-1.413.447-.445c.918-.914 1.172-2.311.634-3.592-.513-1.234-1.673-2.033-2.958-2.033h-.639z"></path>
+                                                <path d="m16 29h2v2h-2z"></path>
+                                                <path d="m20 29h2v2h-2z"></path>
+                                                <path d="m12 29h2v2h-2z"></path>
+                                                <path d="m47 3h2v2h-2z"></path>
+                                                <path d="m51 3h10v2h-10z"></path>
+                                                <path d="m47 7h14v2h-14z"></path>
+                                                <path d="m47 11h14v2h-14z"></path>
+                                                <path d="m47 15h2v2h-2z"></path>
+                                                <path d="m51 15h2v2h-2z"></path>
+                                                <path d="m55 15h2v2h-2z"></path>
+                                                <path d="m59 31h5l-8-10.667-8 10.667h5v30h-6v-18h5l-8-10.667-8 10.667h5v18h-6v-6h5l-8-10.667-8 10.667h5v6h-8.184c.112-.314.184-.648.184-1v-11.184c1.161-.414 2-1.514 2-2.816v-2.178c5.856-2.379 10-8.122 10-14.822h-2c0 7.72-6.28 14-14 14s-14-6.28-14-14 6.28-14 14-14v-2c-8.822 0-16 7.178-16 16 0 6.7 4.144 12.443 10 14.822v2.178c0 1.302.839 2.402 2 2.816v11.184c0 1.654 1.346 3 3 3h47v-2h-4zm-7-2 4-5.333 4 5.333h-3v32h-2v-32zm-12 12 4-5.333 4 5.333h-3v20h-2v-20zm-12 12 4-5.333 4 5.333h-3v8h-2v-8zm-11-8c1.383 0 2.719-.195 4-.527v1.527c0 .552-.449 1-1 1h-6c-.551 0-1-.448-1-1v-1.527c1.281.332 2.617.527 4 .527zm-1 16c-.551 0-1-.448-1-1v-11h4v11c0 .552-.449 1-1 1z"></path>
+                                            </g>
+                                        </svg>
+                                        <span>واحد تحقیق و توسعه</span>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="usage" id="secondUsage"
+                                           value="research_group">
+                                    <label class="form-check-label" for="secondUsage">
+                                        <svg version="1.1" id="researchGroup_icon" xmlns="http://www.w3.org/2000/svg"
+                                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                             viewBox="0 0 496 496" style="enable-background:new 0 0 496 496;"
+                                             xml:space="preserve">
 <g fill="#808080">
 	<g>
 		<g>
@@ -355,39 +360,41 @@
 		</g>
 	</g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
-                                    <g>
+                                            <g>
 </g>
 </svg>
-                                <span>مجموعه پژوهشی</span>
-                            </label>
+                                        <span>مجموعه پژوهشی</span>
+                                    </label>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <button type="button" class="btn btn-primary mb-3 mt-3 pl-4 pr-4" disabled>
